--- a/src/fastread.scss
+++ b/src/fastread.scss
@@ -1,7 +1,7 @@
 /* fast read origin */
 
 body {
-    font-family: 'BIZ UDPGothic', 'M PLUS 1p', 'Ubuntu', 'Arial', 'libra sans' sans-serif;
+    font-family: 'BIZ UDPGothic', 'M PLUS 1p', 'Ubuntu', 'Arial', 'libra sans'sans-serif;
     font-feature-settings: "palt";
 }
 
@@ -11,7 +11,7 @@ body {
 }
 
 #result {
-    box-sizing:content-box;
+    box-sizing: content-box;
     padding: 1rem;
     border: 1px solid #CCC;
 }
@@ -33,7 +33,7 @@ body {
     position: relative;
 }
 
-#stage .hide{
+#stage .hide {
     display: none;
 }
 
@@ -43,11 +43,15 @@ body {
 
 @media (max-width: 772px) {
     #result {
-        box-sizing:content-box;
+        box-sizing: content-box;
         padding: 0;
         border: none;
     }
-    
+
+}
+
+#result p.vibration {
+    line-height: 1.6;
 }
 
 .vibration span {
@@ -61,39 +65,44 @@ body {
     position: relative;
 }
 
-.vibration span:nth-child(4n){
+.vibration span:nth-child(4n) {
     animation-delay: 0s;
 }
 
-.vibration span:nth-child(4n+1){
+.vibration span:nth-child(4n+1) {
     animation-delay: 250ms;
 }
 
-.vibration span:nth-child(4n+2){
+.vibration span:nth-child(4n+2) {
     animation-delay: 500ms;
 }
 
-.vibration span:nth-child(4n+3){
+.vibration span:nth-child(4n+3) {
     animation-delay: 750ms;
 }
 
 @keyframes vibration {
     3% {
-        left : 2px;
-    }  
+        left: 2px;
+    }
+
     40% {
         left: 0px;
     }
+
     50% {
         left: 0px;
     }
-    54%{
+
+    54% {
         left: 2px;
     }
-    90%{
-        left:0px;
+
+    90% {
+        left: 0px;
     }
+
     100% {
-        left:0px;
+        left: 0px;
     }
-  }
+}
